# Capstone-Project-Obstacle-Avoidance-Strategy

./: README.md
Cross-form-Pyramid-Network-for-Stereo-Matching-CFPNet--master/: 2012_train.py  Evaluation.py  README.md  finutune.sh  flyingsense_train.py  flyingsense_train.sh  main.py  main.sh  main_2012.sh  submission.sh  submission_2012.sh  submission_test.py  test.py
Cross-form-Pyramid-Network-for-Stereo-Matching-CFPNet--master/dataloader/: KITTILoader.py  KITTI_submission_loader.py  KITTIloader2012.py  KITTIloader2015.py  SecenFlowLoader.py  listflowfile.py  readpfm.py
Cross-form-Pyramid-Network-for-Stereo-Matching-CFPNet--master/models/: basic.py  stackhourglass.py  submodule.py
Machine-Learning-obstacle-avoidance/source/: gameplay2.js  genetic.js  index2.html  package-lock.json  tp.js  tp2.js
Obstacle Detction/: CMakeLists.txt  Hash.cpp  Hash.h  SSIM.cpp  SSIM.h  align_depth_color.cpp  align_depth_color.h  contours_processor.cpp  contours_processor.h  inpainting.cpp  inpainting.h  kalman.cpp  kitti.cpp  kitti.h  main.cpp  main2.cpp  main3.cpp  main4.cpp  object_detection.cpp  opencamera.cpp  opticalflow.cpp  opticalflow.h  otsu.cpp  pcd.cpp  phash.cpp  phashtest.cpp  readImages.cpp  readImages.h  sgm.cpp  video.cpp
SGM/: CMakeLists.txt  SGM.cpp  SGM.h  main.cpp
SGM/src/: StereoBMHelper.cpp  StereoCommon.h  makefile  rSGMCmd.cpp
camera-calibration/: CMakeLists.txt  calibration.cpp  calibration.h  main.cpp  outer_calibrate.cpp  outermatch.cpp  outermatch.h  undistort.cpp
camera-calibration/data/results/: calibResult.txt  evaluateCalibrationResult.txt
dnn_ctr-master/: main.py
image_transport_ws/devel/: .catkin  .rosinstall  setup.sh
image_transport_ws/devel/include/image_transport_tutorial/: ResizedImage.h
image_transport_ws/devel/lib/image_transport_tutorial/: my_publisher  my_subscriber
image_transport_ws/devel/lib/pkgconfig/: image_transport_tutorial.pc
image_transport_ws/devel/share/image_transport_tutorial/cmake/: image_transport_tutorial-msg-paths.cmake  image_transport_tutorialConfig.cmake
kalman/: CMakeLists.txt  kalman.cpp  kalman.h  kalman2.cpp  main.cpp  main3.cpp  main4.cpp  mouse.cpp
libelas/: CMakeLists.txt
libelas/src/: descriptor.cpp  descriptor.h  main.cpp
mbot/devel/: .catkin  .rosinstall  setup.sh
mbot/devel/lib/pkgconfig/: gazebo_tutorials.pc  rrbot_control.pc  rrbot_description.pc  rrbot_gazebo.pc
mbot/devel/share/gazebo_tutorials/cmake/: gazebo_tutorialsConfig.cmake
mbot/devel/share/rrbot_control/cmake/: rrbot_controlConfig.cmake
mbot/devel/share/rrbot_description/cmake/: rrbot_descriptionConfig.cmake
mbot/devel/share/rrbot_gazebo/cmake/: rrbot_gazeboConfig.cmake
mbot_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
mbot_ws/devel/include/arbotix_msgs/: Analog.h  Digital.h  EnableRequest.h  EnableResponse.h  RelaxRequest.h  RelaxResponse.h  SetSpeedRequest.h  SetSpeedResponse.h  SetupChannelRequest.h  SetupChannelResponse.h
mbot_ws/devel/lib/pkgconfig/: arbotix_controllers.pc  arbotix_firmware.pc  arbotix_msgs.pc  arbotix_python.pc  arbotix_sensors.pc  base_config.pc  mbot_arm_config.pc  mbot_description.pc  mbot_gazebo.pc  mbot_teleop.pc
mbot_ws/devel/share/arbotix_controllers/cmake/: arbotix_controllersConfig.cmake
mbot_ws/devel/share/arbotix_firmware/cmake/: arbotix_firmwareConfig.cmake
mbot_ws/devel/share/arbotix_msgs/cmake/: arbotix_msgs-msg-paths.cmake  arbotix_msgsConfig.cmake
mbot_ws/devel/share/arbotix_python/cmake/: arbotix_pythonConfig.cmake
mbot_ws/devel/share/arbotix_sensors/cmake/: arbotix_sensorsConfig.cmake
mbot_ws/devel/share/base_config/cmake/: base_configConfig.cmake
mbot_ws/devel/share/mbot_arm_config/cmake/: mbot_arm_configConfig.cmake
mbot_ws/devel/share/mbot_description/cmake/: mbot_descriptionConfig.cmake
mbot_ws/devel/share/mbot_gazebo/cmake/: mbot_gazeboConfig.cmake
mbot_ws/devel/share/mbot_teleop/cmake/: mbot_teleopConfig.cmake
mbot_ws/src/mbot/base_config/: .setup_assistant  CMakeLists.txt  package.xml
mbot_ws/src/mbot/base_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  mbot.srdf  mbot.yaml  ompl_planning.yaml  ros_controllers.yaml
mbot_ws/src/mbot/base_config/launch/: chomp_planning_pipeline.launch.xml  (+14 more)
mbot_ws/src/mbot/mbot_description/: CMakeLists.txt  package.xml
mbot_ws/src/mbot/mbot_gazebo/: CMakeLists.txt
mbot_ws/src/mbot/moveit_sim/: CMakeLists.txt  package.xml
realsense_opencv_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
realsense_opencv_ws/devel/include/camera_opencv/: get_top_view.h
realsense_opencv_ws/devel/lib/camera_opencv/: my_subscriber  rosopencv
realsense_opencv_ws/devel/lib/pkgconfig/: camera_opencv.pc
realsense_opencv_ws/src/camera_opencv/: CMakeLists.txt  package.xml
realsense_opencv_ws/src/camera_opencv/include/camera_opencv/: align_depth_color.h  contours_processor.h  kalman.h
realsense_opencv_ws/src/camera_opencv/src/: Hash.cpp  align_depth_color.cpp  contours_processor.cpp  kalman.cpp  my_subscriber.cpp  rosopencv.cpp
teb_local_planner/devel/: .catkin  .rosinstall  setup.sh
teb_local_planner/devel/include/teb_local_planner/: FeedbackMsg.h  TebLocalPlannerReconfigureConfig.h  TrajectoryMsg.h  TrajectoryPointMsg.h
teb_local_planner/devel/lib/pkgconfig/: teb_local_planner.pc
teb_local_planner/devel/lib/teb_local_planner/: draw_subs  pub_obs  subscriber1  subscriber2  subscriber3  test1  test2  test3  test_optim_node
teb_local_planner/src/teb_local_planner/: CMakeLists.txt
teb_local_planner/src/teb_local_planner/cfg/: subscriber2.rviz
teb_local_planner/src/teb_local_planner/launch/: pub_obs.launch  subscriber2.launch
teb_local_planner/src/teb_local_planner/src/: draw_subs.cpp  kalman.cpp  pub_obs.cpp  subscriber1.cpp  subscriber2.cpp  test.cpp  test2.cpp  test3.cpp  zz.txt  zz1.txt  zz2.txt
test/: CMakeLists.txt  txt_all_tp.txt
test/src/: CMakeLists.txt  generatePointCloud.cpp  main2.cpp
turtlebot_gazebo/devel/: .catkin  .rosinstall  setup.sh
turtlebot_gazebo/devel/lib/pkgconfig/: turtlebot_gazebo.pc  turtlebot_stage.pc  turtlebot_stdr.pc
(+33 files in other folders)
